# ml_api_service

./: .flake8  .gitignore  README.md  config.py  main.py  pyproject.toml  trained_model_gb.pkl
auth/: auth.py
db/: db.py
ml/: ml.py
models/: models.py
src/auth/: auth.py
src/db/: db.py
tests/: test_main.py
