[tool.poetry]
name = "ml-api-service"
version = "0.1.0"
description = ""
authors = ["chernyshevd <dmitrychernyshev@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
pydantic = "^2.10.1"
uvicorn = "^0.32.1"
sqlalchemy = "^2.0.36"
joblib = "^1.4.2"
scikit-learn = "^1.5.2"
flake8 = "^7.1.1"
python-jose = "^3.3.0"
python-multipart = "^0.0.18"
auth = "^0.5.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
